# internal/controller/http/v1/router.go
@@ -67,6 +67,7 @@ func NewV1Routes(
 		articles.Get("/", optionalAuth, r.getAllArticles)
 		articles.Get("/feed", auth, r.getFeedArticles)
 		articles.Get("/:slug", optionalAuth, r.getArticle)
+		articles.Put("/:slug", optionalAuth, r.putArticle)
 	}
 
 	tags := apiV1Group.Group("/tags")
